Changed to HTTP client. Fixed bugs.